--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>To Do List</h1>
-                    <a href=''>
+                    <a href='https://dananiev.github.io/react-to-do-list/'>
                         <img src='./images/to-do-list.jpg' alt='To Do List' />
                     </a> 
                 </div>
