--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             </div>
 
             <div class='home__social'>
-                <a href='#www.linkedin.com/in/deyan-ananiev' class='home__social-icon'>
+                <a href='https://bg.linkedin.com/in/deyan-ananiev-05814a95' class='home__social-icon'>
                     <i class='fab fa-linkedin'></i>
                 </a>
-                <a href='#https://github.com/dananiev' class='home__social-icon'>
+                <a href='https://github.com/dananiev' class='home__social-icon'>
                     <i class='fab fa-github'></i>
                 </a>
             </div>
@@ -272,8 +272,8 @@
     <footer class='footer'>
         <p class='footer__title'>Deyan</p>
         <div class='footer__social'>
-            <a href='#' class='footer__icon'><i class='fab fa-linkedin'></i></a>
-            <a href='#' class='footer__icon'><i class='fab fa-github'></i></a>
+            <a href='https://bg.linkedin.com/in/deyan-ananiev-05814a95' class='footer__icon'><i class='fab fa-linkedin'></i></a>
+            <a href='https://github.com/dananiev' class='footer__icon'><i class='fab fa-github'></i></a>
         </div>
         <p>&#169; 2020 copyright all right reserved</p>
     </footer>
