--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class='home bd-grid' id='home'>
             <div class='home__data'>
                 <h1 class='home__title'>
-                    Don't wait. <br>The time will <br>never be just right.
+                    I code because<br> it's good for<br>my mental health.
                 </h1>
                 <button class='home__btn'>
                     <a href='#projects'>Projects</a>
@@ -186,19 +186,19 @@
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Music Store</h1>
-                    <a href=''>
+                    <a href='https://dananiev.github.io/online-music-store/'>
                         <img src='./images/online-music-store.jpg' alt='Online Music Store' />
                     </a> 
                 </div>
                 <div class='project__img'>
-                    <h1 class='project__name'>Searching Song Lyrics</h1>
-                    <a href=''>
+                    <h1 class='project__name'>Song Lyrics Search</h1>
+                    <a href='https://dananiev.github.io/song-lyrics-search/'>
                         <img src='./images/song-lyrics.jpg' alt='Song Lyrics' />
                     </a> 
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Music Player</h1>
-                    <a href=''>
+                    <a href='https://dananiev.github.io/music-player/'>
                         <img src='./images/music-player.jpg' alt='Music Player' />
                     </a> 
                 </div>
@@ -210,14 +210,8 @@
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Pokemon App</h1>
-                    <a href=''>
+                    <a href='https://dananiev.github.io/react-pokemon-app/'>
                         <img src='./images/pokemon.jpg' alt='Pokemon' />
-                    </a> 
-                </div>
-                <div class='project__img'>
-                    <h1 class='project__name'>Covid-19 Tracker</h1>
-                    <a href=''>
-                        <img src='./images/covid-19.jpg' alt='Pokemon' />
                     </a> 
                 </div>
                 <div class='project__img'>
