--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class='projects__container bd-grid'>
                 <div class='project__img'>
                     <h1 class='project__name'>Phones E-Commerce</h1>
-                    <a href=''>
+                    <a href='https://dananiev.github.io/react-mobile-phones-e-commerce/'>
                         <img src='./images/mobile-phone-e-commerce.jpg' alt='Mobile Phone E-Commerce' />
                     </a> 
                 </div>
