update projects and social icons position

--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
                     </a> 
                 </div>
                 <div class='project__img'>
+                    <h1 class='project__name'>Beach Resorts</h1>
+                    <a href='https://dananiev.github.io/react-beach-resorts/'>
+                        <img src='./images/beach-resorts.jpg' alt='Beach Resorts' />
+                    </a> 
+                </div>
+                <div class='project__img'>
                     <h1 class='project__name'>Music Store</h1>
                     <a href='https://dananiev.github.io/online-music-store/'>
                         <img src='./images/online-music-store.jpg' alt='Online Music Store' />
