--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class='home__img'>
-                <img src='./images/home-page-picture.png' alt='' />
+                <img src='./images/pexels-danny-meneses-943096.jpg' alt='' />
             </div>
         </section>
 
@@ -80,11 +80,12 @@
                     <p class='about__text'>
                         and I am coming from an Automotive Industry,
                         bringing almost 5 years of experience as a CAD Engineer.
-                        My portfolio is a representation of all that 
-                        I have learned and accomplished after that period as a Front-end student and self-taught programmer.
-                        I love coding and designing websites and applications
-                        because it is good for my mental health and am looking for opportunities
-                        to work and gain professional experience.
+                        During this time I had decided to start learning programming and
+                        the portfolio you are currently viewing is a representation of all that 
+                        I have learned and accomplished as a coding enthusiast and I am curious to learn a lot more.
+                        As a creative person, I also like designing and sketching things.
+                        In my free time I usually like to hike, swim, run,
+                        having fun with friends, read and to enjoy delicious food. :) 
                     </p>
                 </div>
             </div>
@@ -98,7 +99,7 @@
                 <div>
                     <h2 class='skills__subtitle'>Professional Skills</h2>
                     <p class='skills__text'>
-                        I have focusing mainly on learning HTML5, CSS3, JavaScript, React.
+                        I had focused mainly on learning HTML5, CSS3, JavaScript and React.
                         Basic knowledge in Figma, Photoshop and Illustrator.
                     </p>
                     <div class='skills__data'>
@@ -110,7 +111,7 @@
 
                         </div>
                         <div>
-                            <span class='skills__percentage'>80%</span>
+                            <span class='skills__percentage'>70%</span>
                         </div>
                     </div>
 
@@ -123,7 +124,7 @@
 
                         </div>
                         <div>
-                            <span class='skills__percentage'>80%</span>
+                            <span class='skills__percentage'>70%</span>
                         </div>
                     </div>
 
@@ -136,7 +137,7 @@
 
                         </div>
                         <div>
-                            <span class='skills__percentage'>70%</span>
+                            <span class='skills__percentage'>60%</span>
                         </div>
                     </div>
 
@@ -149,7 +150,7 @@
 
                         </div>
                         <div>
-                            <span class='skills__percentage'>60%</span>
+                            <span class='skills__percentage'>50%</span>
                         </div>
                     </div>
 
