update small elements of the whole design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class='home bd-grid' id='home'>
             <div class='home__data'>
                 <h1 class='home__title'>
-                    I code because<br> it's good for<br>my mental health.
+                    I code because <br>it's good for<br>my mental health.
                 </h1>
                 <button class='home__btn'>
                     <a href='#projects'>Projects</a>
@@ -62,7 +62,7 @@
             </div>
 
             <div class='home__img'>
-                <img src='./images/pexels-danny-meneses-943096.jpg' alt='' />
+                <img src='./images/background-image.jpg' class='home__img-height' alt='' />
             </div>
         </section>
 
@@ -146,7 +146,7 @@
                             <i class='fab fa-react skills__icons-react'></i>
                             <span class='skills__name'>REACT</span>
                         </div>
-                        <div class='skills__bar react skills__js'>
+                        <div class='skills__bar react skills__react'>
 
                         </div>
                         <div>
@@ -181,63 +181,135 @@
             <div class='projects__container bd-grid'>
                 <div class='project__img'>
                     <h1 class='project__name'>Phones E-Commerce</h1>
-                    <a href='https://dananiev.github.io/react-mobile-phones-e-commerce/'>
+                    <img src='./images/mobile-phone-e-commerce.jpg' class='project__image' alt='Mobile Phone E-Commerce' />
+                    <!-- <a href='https://dananiev.github.io/react-mobile-phones-e-commerce/'>
                         <img src='./images/mobile-phone-e-commerce.jpg' alt='Mobile Phone E-Commerce' />
-                    </a> 
+                    </a> -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/react-mobile-phones-e-commerce/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/react-mobile-phones-e-commerce'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Beach Resorts</h1>
-                    <a href='https://dananiev.github.io/react-beach-resorts/'>
+                    <img src='./images/beach-resorts.jpg' class='project__image' alt='Beach Resorts' />
+                    <!-- <a href='https://dananiev.github.io/react-beach-resorts/'>
                         <img src='./images/beach-resorts.jpg' alt='Beach Resorts' />
-                    </a> 
+                    </a>  -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/react-beach-resorts/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/react-beach-resorts'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Music Store</h1>
-                    <a href='https://dananiev.github.io/online-music-store/'>
+                    <img src='./images/online-music-store.jpg' class='project__image' alt='Online Music Store' />
+                    <!-- <a href='https://dananiev.github.io/online-music-store/'>
                         <img src='./images/online-music-store.jpg' alt='Online Music Store' />
-                    </a> 
+                    </a>  -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/online-music-store/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/online-music-store'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Song Lyrics Search</h1>
-                    <a href='https://dananiev.github.io/song-lyrics-search/'>
+                    <img src='./images/song-lyrics.jpg' class='project__image' alt='Song Lyrics' />
+                    <!-- <a href='https://dananiev.github.io/song-lyrics-search/'>
                         <img src='./images/song-lyrics.jpg' alt='Song Lyrics' />
-                    </a> 
+                    </a>  -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/song-lyrics-search/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/song-lyrics-search'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Music Player</h1>
-                    <a href='https://dananiev.github.io/music-player/'>
-                        <img src='./images/music-player.jpg' alt='Music Player' />
-                    </a> 
+                    <img src='./images/music-player.jpg' class='project__image' alt='Music Player' />
+                    <!-- <a href='https://dananiev.github.io/music-player/'>
+                        <img src='./images/music-player.jpg' class='project__image' alt='Music Player' />
+                    </a> -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/music-player/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/music-player'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>To Do List</h1>
-                    <a href='https://dananiev.github.io/react-to-do-list/'>
-                        <img src='./images/to-do-list.jpg' alt='To Do List' />
-                    </a> 
+                    <img src='./images/to-do-list.jpg' class='project__image' alt='To Do List' />
+                    <!-- <a href='https://dananiev.github.io/react-to-do-list/'>
+                        <img src='./images/to-do-list.jpg' class='project__image' alt='To Do List' />
+                    </a> -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/react-to-do-list/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/react-to-do-list'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Pokemon App</h1>
-                    <a href='https://dananiev.github.io/react-pokemon-app/'>
-                        <img src='./images/pokemon.jpg' alt='Pokemon' />
-                    </a> 
+                    <img src='./images/pokemon.jpg' class='project__image' alt='Pokemon' />
+                    <!-- <a href='https://dananiev.github.io/react-pokemon-app/'>
+                        <img src='./images/pokemon.jpg' class='project__image' alt='Pokemon' />
+                    </a> -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/react-pokemon-app/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/react-pokemon-app'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
                 <div class='project__img'>
                     <h1 class='project__name'>Mix and Match Game</h1>
-                    <a href='https://dananiev.github.io/mix-match-game/'>
-                        <img src='./images/mix-match-game.jpg' alt='Pokemon' />
-                    </a> 
+                    <img src='./images/mix-match-game.jpg' class='project__image' alt='MixMatchGame' />
+                    <!-- <a href='https://dananiev.github.io/mix-match-game/'>
+                        <img src='./images/mix-match-game.jpg' class='project__image' alt='MixMatchGame' />
+                    </a> -->
+                    <div class='project__btn__container'>
+                        <a href='https://dananiev.github.io/mix-match-game/'>
+                            <button class='btn__demo'>Demo</button>
+                        </a>
+                        <a href='https://github.com/dananiev/mix-match-game'>
+                            <button class='btn__source__code'>Source</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- CONTACT -->
-        <section id='contact'>
-            <div class='contact container'>
+        <section class='contacts section' id='contacts'>
+            <div class='contacts__container bd-grid'>
                 <div>
                     <h1 class='section-title'>Contact <span>info</span></h1>
                 </div>
                 <div class='contact-items'>
-                    <div class='contact-item'>
+                    <!-- <div class='contact-item'>
                         <div class='icon'>
                             <i class='fas fa-phone-square skills__icons-contact'></i>
                         </div>
@@ -245,10 +317,10 @@
                             <h1>Phone</h1>
                             <h2>(00359) 888 434 818</h2>
                         </div>
-                    </div>
+                    </div> -->
                     <div class='contact-item'>
                         <div class='icon'>
-                            <i class='fas fa-envelope-square skills__icons-contact'></i>
+                            <i class='fas fa-envelope skills__icons-contact'></i>
                         </div>
                         <div class='contact-info'>
                             <h1>Email</h1>
@@ -261,7 +333,7 @@
                         </div>
                         <div class='contact-info'>
                             <h1>Address</h1>
-                            <h2>Mladost 4, Sofia, Bulgaria</h2>
+                            <h2>Sofia, Bulgaria</h2>
                         </div>
                     </div>
                 </div>
@@ -281,7 +353,7 @@
 
 
 
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
     <script src='./script.js'></script>
 </body>
 </html>
