--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/react-mobile-phones-e-commerce'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/react-beach-resorts'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/online-music-store'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/song-lyrics-search'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/music-player'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/react-to-do-list'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -280,7 +280,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/react-pokemon-app'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
@@ -295,7 +295,7 @@
                             <button class='btn__demo'>Demo</button>
                         </a>
                         <a href='https://github.com/dananiev/mix-match-game'>
-                            <button class='btn__source__code'>Source</button>
+                            <button class='btn__source__code'>Source Code</button>
                         </a>
                     </div>
                 </div>
